tests/parse_print/random_perturb/set01/change-06/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-06/change-06.essence line 1, column 19:
unexpected W
    line 1, column 19
    language Essence 1.W
                   ^^^^^^^